--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Personalized .gitignore files
+*.sln
+CSGO_Hack_Interface/*.vcxproj
+CSGO_Hack_Interface/*.vcxproj.filters
 # User-specific files
 *.rsuser
 *.suo
